--- a/Practicum3/package.json
+++ b/Practicum3/package.json
@@ -9,6 +9,8 @@
   "author": "Mark & Mika",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mysql": "^2.13.0",
+    "nodemon": "^1.11.0"
   }
 }
