Develop database update.

--- a/Practicum3/config.json
+++ b/Practicum3/config.json
@@ -1,7 +1,7 @@
 {
   "WebPort": "1337",
-  "sever": "localhost",
-  "password": "ulu",
-  "username": "ulu",
+  "server": "localhost",
+  "password": "DEGnMLR7QSXRutJR",
+  "username": "WorldAdmin",
   "dbname": "world"
 }
