--- a/Practicum3/package.json
+++ b/Practicum3/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
+    "jwt-simple": "^0.5.1",
     "mysql": "^2.13.0",
     "nodemon": "^1.11.0"
   }
